[mirotalk] - #281 - Add Support for Custom Avatar via Options Object
