# app/api/join/join.js
@@ -21,8 +21,9 @@ async function getJoin() {
             body: JSON.stringify({
                 room: 'test',
                 name: 'mirotalk',
-                audio: true,
-                video: true,
+                avatar: false,
+                audio: false,
+                video: false,
                 screen: false,
                 hide: false,
                 notify: true,
