# app/api/join/join.php
@@ -20,8 +20,9 @@ curl_setopt($ch, CURLOPT_HTTPHEADER, $headers);
 $data = array(
     "room"          => "test",
     "name"          => "mirotalk",
-    "audio"         => true,
-    "video"         => true,
+    "avatar"        => false,
+    "audio"         => false,
+    "video"         => false,
     "screen"        => false,
     "hide"          => false,
     "notify"        => true,
